bg done, SoA in progress

--- a/thesis intermedia/3- state of art/3.3 Motor NL - dashboard.md
+++ b/thesis intermedia/3- state of art/3.3 Motor NL - dashboard.md
@@ -1,6 +1,10 @@
 DataTone - falar disto, do NL4DV e do NL2VIS em particular, que é o que é usado para a geração de gráficos
 Eviza
 
+NL2SQL
+
+Se calhar em vez de ser NL para dashboard passa a ser NL para SQL, acho que faz mais sentido
+
 
 
 
