--- a/thesis intermedia/2- Background/2.1 Real-Time Analytics Systems.md
+++ b/thesis intermedia/2- Background/2.1 Real-Time Analytics Systems.md
@@ -1,3 +1,4 @@
+[[Background]]
 - Explica o que é _real-time data processing_ (event-driven, streaming-first architecture).
     
 - Descreve as camadas típicas:
