--- a/thesis intermedia/2- Background/2.3 Large Language Models for Structured Output.md
+++ b/thesis intermedia/2- Background/2.3 Large Language Models for Structured Output.md
@@ -1,4 +1,4 @@
-
+[[Background]]
 - Explica brevemente o que é um **LLM** (transformer, embeddings, context windows).
     
 - Introduz o conceito de **structured output generation** (JSON schema, grammar constraints, function calling).
@@ -30,7 +30,7 @@ Traditional LLM outputs are unstructured text, which is adequate for dialogue bu
 3. **Function calling**, a technique popularized by OpenAI and later adopted by Anthropic and Microsoft, which allows developers to expose a list of callable functions that the model can “invoke” by returning structured arguments in JSON format (OpenAI, 2023).
     
 
-In the context of this dissertation, structured generation is fundamental because the LLM is not expected to produce free text but rather a **JSON configuration** describing a dashboard. This configuration includes components such as titles, layouts, widgets, metrics, filters, and thresholds. ==For example, when the user provides a natural language prompt like “show me a queue performance dashboard focusing on wait time and call handling,” the model must generate a syntactically valid JSON object that defines the widgets and metrics corresponding to these concepts. Such output can then be directly interpreted by the existing dashboard rendering engine, effectively turning natural language into a functional interface for data visualization.==
+==In the context of this dissertation, structured generation is fundamental because the LLM is not expected to produce free text but rather a **JSON configuration** describing a dashboard==. This configuration includes components such as titles, layouts, widgets, metrics, filters, and thresholds. ==For example, when the user provides a natural language prompt like “show me a queue performance dashboard focusing on wait time and call handling,” the model must generate a syntactically valid JSON object that defines the widgets and metrics corresponding to these concepts. Such output can then be directly interpreted by the existing dashboard rendering engine, effectively turning natural language into a functional interface for data visualization.==
 
 Ensuring **semantic alignment** between user intent and generated configuration requires coupling the LLM with a validation layer that checks the generated JSON against both its schema and the organization’s domain ontology (e.g., what constitutes “queue performance” or “average handle time”). This hybrid design—combining probabilistic reasoning from the LLM with deterministic validation from schema constraints—produces outputs that are both expressive and safe to execute. %%O LLM tem que aprender a sintaxe e a semantica segundo a ontologia definida (geralmente isto está num ficheiro no backend para o LLM aprender)%%
 
