--- a/thesis intermedia/2- Background/2.6 Contact Center as a Service - CCaaS.md
+++ b/thesis intermedia/2- Background/2.6 Contact Center as a Service - CCaaS.md
@@ -1,4 +1,4 @@
-
+[[Background]]
 The evolution of contact centers from on-premise infrastructure to **cloud-native, API-driven platforms** has given rise to the model known as **Contact Center as a Service (CCaaS)**. In this paradigm, contact center operations — including telephony, routing, analytics, and workforce management — are delivered as scalable cloud services rather than as locally hosted systems (Gartner, 2024).
 
 A defining characteristic of CCaaS platforms is their support for **real-time event streaming**. Every call, chat, or message generates a continuous flow of structured events — agent status changes, queue updates, or customer interactions — that can be captured, processed, and visualized in near real time. For example, **Amazon Connect Streams API** and **Twilio Flex Insights** expose WebSocket and REST endpoints through which live metrics (e.g., number of active calls, service level, or average handle time) can be consumed by third-party applications (AWS, 2023; Twilio, 2024). This streaming-first design enables organizations to build **custom analytics pipelines and dashboards** that reflect operational conditions with minimal latency.
