--- a/thesis intermedia/2- Background/2.7 Summary.md
+++ b/thesis intermedia/2- Background/2.7 Summary.md
@@ -1,3 +1,4 @@
+[[Background]]
 No fim do capítulo, faz uma breve conclusão a resumir a importância de cada bloco — por exemplo:
 
 > “Compreender as bases da análise em tempo real e o papel dos LLMs na tradução de linguagem natural em configurações estruturadas é essencial para contextualizar o desenvolvimento da solução proposta nesta dissertação.”
