--- a/thesis intermedia/3- state of art/3.2 Fundamentos e Trabalhos Relacionados.md
+++ b/thesis intermedia/3- state of art/3.2 Fundamentos e Trabalhos Relacionados.md
@@ -1,2 +1,165 @@
 [[State of art]]
 
+Fundamentos NL→Vis / NL→JSON
+https://www.scopus.com/pages/publications/84958249800?origin=resultslist
+https://www.scopus.com/pages/publications/85099075233?origin=resultslist
+https://www.scopus.com/pages/publications/85068127741?origin=resultslist
+https://www.scopus.com/pages/publications/105004177830?origin=resultslist
+https://www.scopus.com/pages/publications/85159755297?origin=resultslist
+
+Structured Outputs / Constrained Decoding (garantir JSON válido)
+https://microsoft.github.io/TypeChat/blog/introducing-typechat/
+
+
+NL -> SQL
+https://www.scopus.com/pages/publications/85193997831?origin=resultslist
+
+
+
+
+### NL→JSON / NL→Visualização
+
+- **NL4DV: A Toolkit for Generating Analytic Specifications for Data Visualization from Natural Language Queries.** [arXiv+1](https://arxiv.org/abs/2008.10723?utm_source=chatgpt.com)
+    
+- **Data2Vis: Automatic Generation of Data Visualizations Using Sequence-to-Sequence Recurrent Neural Networks.** [arXiv+1](https://arxiv.org/abs/1804.03126?utm_source=chatgpt.com)
+    
+- **Eviza: A Natural Language Interface for Visual Analysis.** [ACM Digital Library+1](https://dl.acm.org/doi/10.1145/2984511.2984588?utm_source=chatgpt.com)
+    
+- **DataTone: Managing Ambiguity in Natural Language Interfaces for Data Visualization.** [ACM Digital Library+1](https://dl.acm.org/doi/10.1145/2807442.2807478?utm_source=chatgpt.com)
+    
+- **Generating Analytic Specifications for Data Visualization from Natural Language Queries using Large Language Models.** [arXiv+1](https://arxiv.org/abs/2408.13391?utm_source=chatgpt.com)
+    
+- **An Efficient Approach for Generating Visualizations from Natural Language Queries (NL2VIS).** [ACL Anthology+1](https://aclanthology.org/2024.lrec-main.1119.pdf?utm_source=chatgpt.com)
+    
+- **Automated Data Visualization from Natural Language via Large Language Models: An Exploratory Study.** [arXiv+1](https://arxiv.org/pdf/2404.17136?utm_source=chatgpt.com)
+    
+
+### Structured Outputs / Constrained Decoding (garantir JSON válido)
+
+- **Introducing TypeChat.** [microsoft.github.io+1](https://microsoft.github.io/TypeChat/blog/introducing-typechat/?utm_source=chatgpt.com)
+    
+- **Outlines: Structured Outputs (JSON Schema / CFG–guided generation).** [dottxt-ai.github.io+1](https://dottxt-ai.github.io/outlines/?utm_source=chatgpt.com)
+    
+- **llguidance / Guidance: Super-fast Structured Outputs (JSON Schema & Grammars).** [GitHub+1](https://github.com/guidance-ai/llguidance?utm_source=chatgpt.com)
+    
+- **Jsonformer: A Bulletproof Way to Generate Structured JSON from LLMs.** [GitHub+1](https://github.com/1rgs/jsonformer?utm_source=chatgpt.com)
+    
+- **Generating Structured Outputs from Language Models (JSONSchemaBench).** [arXiv+1](https://arxiv.org/html/2501.10868v1?utm_source=chatgpt.com)
+    
+
+### NL→SQL / Conversational BI
+
+- **A Survey on Employing Large Language Models for Text-to-SQL Tasks.** [ACM Digital Library+1](https://dl.acm.org/doi/10.1145/3737873?utm_source=chatgpt.com)
+    
+- **A Survey of LLM-based Text-to-SQL.** [openreview.net](https://openreview.net/forum?id=ocrajQord2&referrer=%5Bthe+profile+of+Zijin+Hong%5D%28%2Fprofile%3Fid%3D~Zijin_Hong1%29&utm_source=chatgpt.com)
+    
+- **ChatBI: Towards Natural Language to Complex Business Intelligence SQL.** [arXiv+1](https://arxiv.org/abs/2405.00527?utm_source=chatgpt.com)
+    
+- **Auto-BI: Automatically Build BI-Models Leveraging Local Join Prediction and Global Schema Graph.** [Microsoft+1](https://www.microsoft.com/en-us/research/wp-content/uploads/2023/06/Auto-BI.pdf?utm_source=chatgpt.com)
+    
+
+### Estado da prática (para comparar com o teu protótipo)
+
+- **Power BI Copilot — Summarize/Create Reports with Natural Language.** [Microsoft Learn+1](https://learn.microsoft.com/en-us/power-bi/create-reports/copilot-introduction?utm_source=chatgpt.com)
+    
+- **Tableau GPT / Tableau Pulse — AI-generated insights & NL exploration.** [Tableau+1](https://www.tableau.com/blog/release-tableau-pulse-metrics-layer-viz-navigation?utm_source=chatgpt.com)
+    
+- **ThoughtSpot Sage — NL→SQL Answers (LLM-assisted).** [docs.thoughtspot.com+1](https://docs.thoughtspot.com/cloud/10.13.0.cl/ai-answers.html?utm_source=chatgpt.com)
+
+
+Excelente pergunta — escolher bem as **keywords** faz toda a diferença no Scopus, especialmente num tema híbrido como o teu (LLMs + dashboards + JSON).  
+Como o teu projeto junta **interpretação de linguagem natural**, **geração estruturada (JSON)** e **visualização de dados em tempo real**, o ideal é combinares 2 ou 3 eixos por pesquisa.
+
+---
+
+## 🔍 **Conjunto principal de keywords**
+
+Podes usar **aspas** e **AND/OR** no Scopus como neste exemplo:
+
+> `"natural language" AND (visualization OR dashboard) AND ("large language model" OR LLM)`
+
+---
+
+## 🧠 **1. Fundamentos NL→Vis / NL→Dash**
+
+Estas buscam trabalhos que traduzem linguagem natural em visualizações:
+
+- `"natural language interface" AND visualization`
+    
+- `"natural language" AND ("data visualization" OR "visual analytics")`
+    
+- `"NL2VIS" OR "NL4DV" OR "natural language to visualization"`
+    
+- `"conversational analytics" AND dashboard`
+    
+- `"language model" AND ("data visualization" OR "dashboard generation")`
+    
+
+**Sugestão extra:** limita por _Subject Area: Computer Science_ e _Source Type: Conference Proceedings / Journal_  
+Boas venues: _IEEE TVCG_, _ACM UIST_, _CHI_, _EuroVis_, _Information Visualization_.
+
+---
+
+## ⚙️ **2. Structured Outputs / JSON Generation**
+
+Para artigos que tratam de validação ou geração de JSON estruturado com LLMs:
+
+- `"structured output" AND ("large language model" OR "LLM")`
+    
+- `"JSON generation" AND ("language model" OR "transformer")`
+    
+- `"constrained decoding" AND ("text generation" OR "structured data")`
+    
+- `"schema-guided" AND ("natural language generation" OR "LLM")`
+    
+
+**Dica:** acrescenta `"schema validation"` ou `"output constraint"` para filtrar papers técnicos.
+
+---
+
+## 🧩 **3. NL→SQL / Conversational BI**
+
+Para a parte de mapeamento semântico e business intelligence:
+
+- `"text to SQL"` OR `"text-to-SQL"` OR `"natural language to SQL"`
+    
+- `"conversational business intelligence"`
+    
+- `"LLM" AND ("query generation" OR "semantic parsing")`
+    
+- `"language model" AND "structured query"`
+    
+
+**Boas venues:** _VLDB_, _ACM SIGMOD_, _ICDE_, _EMNLP_, _NAACL_, _ACL Anthology_.
+
+---
+
+## 📊 **4. Contexto industrial / dashboards inteligentes**
+
+Para mencionar “estado da prática”:
+
+- `"AI dashboard" AND "real time analytics"`
+    
+- `"LLM" AND ("data analytics" OR "business intelligence")`
+    
+- `"copilot" AND ("data visualization" OR "analytics")`
+    
+- `"conversational dashboard" AND ("AI" OR "machine learning")`
+    
+
+---
+
+## 💡 Dicas finais
+
+- Usa **Title/Abstract/Keywords** como filtro de campo (`TITLE-ABS-KEY()` no Scopus).
+    
+- Junta **sinónimos**: “natural language interface” ≈ “conversational interface”, “data visualization” ≈ “visual analytics”.
+    
+- Foca em **anos 2015–2025** (a maior parte do progresso NL→Vis e LLMs é recente).
+    
+- Exporta os resultados em **BibTeX** para importar diretamente no teu gestor de referências.
+    
+
+---
+
+Se quiseres, posso criar **strings de pesquisa Scopus já prontas** (por exemplo 3 queries otimizadas, uma por eixo) — queres que te as prepare?
