state of art update and questions clarified

--- a/thesis intermedia/3- state of art/3.3/3.3.2 Semantic Mapping.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.2 Semantic Mapping.md
@@ -130,3 +130,60 @@ The **Semantic Mapping** stage ensures that natural language inputs are accurate
 For the NL→Dash project, a **custom semantic layer** offers the best balance between **adaptability**, **lightweight integration**, and **domain-specific accuracy**. By embedding semantic rules directly into the backend, the system achieves **“semantically aligned JSON”** structures that maintain coherence between user intent and data representation — a prerequisite for the subsequent **JSON Generation** and **Validation** stages.
 
 This approach reinforces the project’s objective: to create an intelligent, real-time analytics system capable of transforming natural language prompts into complete, semantically consistent dashboards.
+
+
+## custom semantic mapping example (é a que vou usar)
+### 1) Ontologia + sinónimos (YAML/JSON)
+
+{
+  "title": "Queue Performance — Suporte (Últimas 2h)",
+  "layout": "2x2",
+  "widgets": [
+    {
+      "type": "timeseries",
+      "metrics": ["aht", "wait_time_avg"],
+      "dimensions": ["started_at"],
+      "filters": [
+        { "dimension": "queue", "operator": "=", "value": "Suporte" },
+        { "dimension": "started_at", "operator": ">= ", "value": "now()-120m" }
+      ]
+    },
+    {
+      "type": "kpi",
+      "metric": "aht",
+      "filters": [
+        { "dimension": "queue", "operator": "=", "value": "Suporte" },
+        { "dimension": "started_at", "operator": ">= ", "value": "now()-120m" }
+      ],
+      "thresholds": { "good": "<=180", "warn": "<=240" }
+    }
+  ]
+}
+
+
+### 2) Resolução do pedido → JSON alinhado
+
+{
+  "title": "Queue Performance — Suporte (Últimas 2h)",
+  "layout": "2x2",
+  "widgets": [
+    {
+      "type": "timeseries",
+      "metrics": ["aht", "wait_time_avg"],
+      "dimensions": ["started_at"],
+      "filters": [
+        { "dimension": "queue", "operator": "=", "value": "Suporte" },
+        { "dimension": "started_at", "operator": ">= ", "value": "now()-120m" }
+      ]
+    },
+    {
+      "type": "kpi",
+      "metric": "aht",
+      "filters": [
+        { "dimension": "queue", "operator": "=", "value": "Suporte" },
+        { "dimension": "started_at", "operator": ">= ", "value": "now()-120m" }
+      ],
+      "thresholds": { "good": "<=180", "warn": "<=240" }
+    }
+  ]
+}
